--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/bluebird": "^3.5.16",
     "@types/mocha": "*",
     "@types/node": "*",
     "copyfiles": "^1.2.0",
@@ -37,6 +38,7 @@
   },
   "dependencies": {
     "barbary": "^0.0.3",
+    "bluebird": "^3.5.1",
     "escape-html": "^1.0.3",
     "fx43": "^0.0.7",
     "mkdirp-promise": "^5.0.1",
