--- a/package.json
+++ b/package.json
@@ -18,21 +18,23 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.16",
     "@types/globby": "^6.1.0",
-    "@types/mocha": "*",
+    "@types/jest": "^22.0.1",
     "@types/node": "*",
     "copyfiles": "^1.2.0",
-    "mocha": "*",
+    "jest": "^22.0.4",
     "typescript": "*"
   },
   "scripts": {
-    "test": "yarn run lint && yarn run compile && yarn run copy && mocha \"dist/test/*.js\"",
-    "dev_test": "mocha \"dist/test/*.js\"",
-    "build": "tsc && yarn test",
+    "test": "yarn run clean && yarn run compile && yarn run lint && yarn run copy && yarn run dev_test",
+    "dev_test": "jest",
+    "build": "yarn test",
     "compile": "tsc",
+    "dev": "yarn run clean && tsc -w",
     "prepublishOnly": "yarn run test",
-    "dev": "tsc -w",
-    "lint": "tslint --project .",
-    "copy": "copyfiles \"test/data/**/*.*\" \"dist\""
+    "lint": "tslint --project tsconfig.json --config tslint.json",
+    "copy": "copyfiles \"tests/data/**/*.*\" \"dist\"",
+    "clean:dist": "rm -rf dist",
+    "clean": "npm run clean:dist"
   },
   "engines": {
     "node": ">=6.0.0"
