Add "base" test case

--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@types/globby": "^6.1.0",
     "@types/jest": "^22.0.1",
     "@types/node": "*",
+    "@types/tmp": "^0.0.33",
     "copyfiles": "^1.2.0",
+    "fx45-node": "^1.0.1",
     "jest": "^22.0.4",
+    "tmp": "^0.0.33",
     "tslint": "^5.8.0",
     "typescript": "*"
   },
@@ -45,7 +48,7 @@
     "bluebird": "^3.5.1",
     "escape-html": "^1.0.3",
     "fx43": "^0.0.11",
-    "fx54-node": "^1.0.0",
+    "fx54-node": "^1.0.2",
     "globby": "^6.1.0",
     "lodash.trimend": "^4.5.1",
     "m-fs": "^1.0.1",
