--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/bluebird": "^3.5.16",
+    "@types/bluebird": "^3.5.19",
     "@types/jest": "^22.0.1",
-    "@types/node": "*",
+    "@types/node": "9.3.0",
     "@types/tmp": "^0.0.33",
     "copyfiles": "^1.2.0",
-    "fx45-node": "^1.0.1",
-    "jest": "^22.0.4",
+    "fx45-node": "^1.0.2",
+    "jest": "^22.1.1",
     "tmp": "^0.0.33",
-    "tslint": "^5.8.0",
-    "typescript": "*"
+    "tslint": "^5.9.1",
+    "typescript": "2.6.2"
   },
   "scripts": {
-    "test": "yarn run clean && yarn run compile && yarn run lint && yarn run copy && yarn run dev_test",
-    "dev_test": "jest",
+    "test": "yarn run clean && yarn run compile && yarn run lint && yarn run dev_test",
+    "dev_test": "yarn run copy && jest",
     "build": "yarn test",
     "compile": "tsc",
     "dev": "yarn run clean && tsc -w",
@@ -47,8 +47,8 @@
     "barbary-node": "^1.2.0",
     "bluebird": "^3.5.1",
     "escape-html": "^1.0.3",
-    "fx43": "^0.0.11",
-    "fx54-node": "^1.0.2",
+    "fx43": "^2.0.0",
+    "fx54-node": "^1.0.3",
     "lodash.trimend": "^4.5.1",
     "m-fs": "^1.0.1",
     "markdown-it-coldmark": "^0.0.4",
