--- a/package.json
+++ b/package.json
@@ -23,20 +23,23 @@
     "copyfiles": "^1.2.0",
     "fx45-node": "^1.0.2",
     "jest": "^22.1.4",
+    "rimraf": "^2.6.2",
     "tmp": "^0.0.33",
     "tslint": "^5.9.1",
     "typescript": "2.7.1"
   },
   "scripts": {
     "test": "yarn run clean && yarn run compile && yarn run lint && yarn run dev_test",
-    "dev_test": "yarn run copy && jest",
+    "dev_test": "yarn run copy && yarn run t",
+    "dt": "yarn run dev_test",
+    "t": "jest",
     "build": "yarn test",
     "compile": "tsc",
     "dev": "yarn run clean && tsc -w",
     "prepublishOnly": "yarn run test",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "copy": "copyfiles \"tests/data/**/*.*\" \"dist\"",
-    "clean:dist": "rm -rf dist",
+    "clean:dist": "rimraf dist",
     "clean": "npm run clean:dist"
   },
   "engines": {
