Set strictPropertyInitialization to false

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "outDir": "dist",
         "declaration": true,
         "strict": true,
+        "strictPropertyInitialization": false,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "lib": [
