--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,8 +26,8 @@
 
 
 [[constraint]]
-  branch = "master"
   name = "github.com/mgenware/go-packagex"
+  version = "1.3.2"
 
 [prune]
   go-tests = true
